[package]
name = "overlapnanny"
version = "0.1.0"
edition = "2021"

[dependencies]
kurbo = { version = "0.11.0" }
read-fonts = "0.19.1"
font-types = "0.5.3"
skrifa = "0.19.1"
log = "0.4.14"
env_logger = "0.10.0"
test-log = "0.2.16"
approx = "0.5.1"
clap = { version = "4.4.7", features=["derive"]}
skia-safe = "0.75.0"
